--- a/glfw/glfw.vcxproj
+++ b/glfw/glfw.vcxproj
@@ -92,7 +92,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\~$(Platform)\engine\</OutDir>
-    <IntDir>$(SolutionDir)bin-int\$(Configuration)\~$(Platform)\engine\</IntDir>
+    <IntDir>$(SolutionDir)bin-int\$(Configuration)\~$(Platform)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
