--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -56,9 +56,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\opengl\opengl.cpp" />
     <ClCompile Include="src\log\log.cpp" />
     <ClCompile Include="src\app\app.cpp" />
-    <ClCompile Include="src\window\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\enpch.hpp" />
@@ -66,6 +66,7 @@
     <ClInclude Include="includes\core.h" />
     <ClInclude Include="includes\engine.h" />
     <ClInclude Include="includes\window.hpp" />
+    <ClInclude Include="src\opengl\opengl.hpp" />
     <ClInclude Include="src\app\app.hpp" />
     <ClInclude Include="src\entry.h" />
     <ClInclude Include="src\events\AppEvent.hpp" />
